 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Fix console error for texture-flags RMB menu if game paths are not configured.

* [DanielPharos]: Stop a failed initialization of a viewport causing access violations.

* [DanielPharos]: Fix for the long-standing bug where float-specifics were not working
          - in Wine, and on non-Latin-alphabet Windows (for example, Chinese Windows).

* [cdunde]: Fixed possible dupe component names from sneaking through.

* [DanielPharos]: Fixes for brushDef2 and brushDef3 texture loading.

6.6.0 Beta 6
============
* [cdunde/DanielPharos]: Started HL2 Exporter support but not completed yet.
          - Open the plugins/ie_md0_HL2_export.py file with any text editor for details at top of file.

* [cdunde/DanielPharos]: Removed game support for Xonotic due to improper texture paths.

* [cdunde]: Added full game support for Xonotic including .md3 model displaying.

* [DanielPharos]: Fully fixed HL1 BSP MipTex saving.

* [DanielPharos]: Try to save everything in a texturelist. Helps HL1 BSP MipTex saving.

* [cdunde]: Added Quake 1 and Hexen II Specific items for Model Root in the Model Editor.

* [DanielPharos]: Fixed SOF1 tools: they don't work with the proper slashes.

* [DanielPharos]: Moved some map options around to make them more findable, and to make them work again.

6.6.0 Beta 5
============
* [DanielPharos]: Added DOOM .wad file reading support, per user request. Note: Saving will output a Quake wad!

* [DanielPharos]: Made the .map importer more resilient against bad brushes.

* [cdunde]: Added Entities and Textures add-ons for Quake 3 Smoking Guns stand alone game.
